--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
         <script>
             function zap() {
                 var urls = new Array();
-                    urls[0] = "https://wa.me/5522999999999";
-                    urls[1] = "https://wa.me/5532999999999";
-                    urls[2] = "https://wa.me/5511999999999";
-                    urls[3] = "https://wa.me/5575999999999";
-                    urls[4] = "https://wa.me/5582999999999";
+                    urls[0] = "https://wa.me/5538999869531";
                     var random = Math.floor(Math.random()*urls.length);
                     window.location = urls[random];
                 }
@@ -62,7 +58,7 @@
 
     
         <div class="foto-redonda" style="text-align: center;">
-            <img src="C:\Users\paulo\Desktop\izzy.jpg" alt="Minha Foto">
+            <img src="Eu.jpg" alt="Minha Foto">
         </div>
         <p>ME CHAME NO WPP BB 🔥👇</p>
         <a class="botao-verde" href="javascript:zap();" >Clique aqui</a>
